--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </header>
 
 
-    <main>
+    <main id="main">
 
         <!-- *****************************************************************
             Section: how to become a better designer
@@ -135,7 +135,6 @@
                     facing and show the result to the community.
                 </p>
             </div>
-
             <article>
                 <img src="assets/img/step01.png" alt="">
                 <div>
@@ -148,7 +147,6 @@
                     </p>
                 </div>
             </article>
-
             <article>
                 <img src="assets/img/step02.png" alt="">
                 <div>
@@ -160,7 +158,6 @@
                     </p>
                 </div>
             </article>
-
             <article>
                 <img src="assets/img/step03.png" alt="">
                 <div>
@@ -172,13 +169,11 @@
                     </p>
                 </div>
             </article>
-
             <article>
                 <img src="assets/img/step04.png" alt="">
                 <div>
                     <h2>04</h2>
                     <img src="assets/img/step04.svg" alt="">
-
                     <h4>Share your work</h4>
                     <p>Share your design on instagram or dribbble with the hashtag #thedesignproject Remember to explain
                         what the problem was, how you came up with the solution and how the design achieves it. Find out
@@ -186,25 +181,28 @@
                     </p>
                 </div>
             </article>
+        </section>
 
+
+        <!-- *****************************************************************
+            Section: Do you like this challenge? Subscribe...
+        -->
+        <section id="subscribe">
+            <form action="">
+                <h1>Do you like this challenge?</h1>
+                <p>Subscribe to be the first to hear about updates, tips and recommendations!</p>
+                <input type="email" name="email" id="email" placeholder="Write your email here">
+                <input type="button" id="subscribe-button" value="Subscribe" onclick="subscribe()">
+            </form>
         </section>
 
     </main>
 
-    <!-- 
-    
-
-
-    Do you like this challenge? 
-    Subscribe to be the first to hear about updates, tips and recommendations!
-
--->
-
-
 
 
     <footer>
-
+        <p> Created with Love a Webdesigner </p>
+        <img src="assets/img/love.png" alt="">
     </footer>
 
     <script src="assets/js/main.js"></script>
