Sizing and positioning

--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
 
 
         <!-- *****************************************************************
-            Section: An image gallery
+            Section (as <div>): An image gallery 
         -->
-        <section id="gallery">
+        <div id="gallery">
             <img src="assets/img/images.jpg" alt="">
-        </section>
+        </div>
 
 
         <!-- *****************************************************************
@@ -66,9 +66,12 @@
             </div>
             <p>
                 Earlier this year (January 2018). I started to think about how I could improve my design skills and
-                attract more customers. I wanted to start designing some ideas that for a long time I had only on paper
-                and stored on my cell phone, I decided to look for some challenge, something that makes more sense with
-                what I thought. I saw that many designers (especially in dribbble) made a daily user interface, I really
+                attract more customers. I wanted to start designing some ideas that for a long time I had only on
+                paper
+                and stored on my cell phone, I decided to look for some challenge, something that makes more sense
+                with
+                what I thought. I saw that many designers (especially in dribbble) made a daily user interface, I
+                really
                 liked the idea, but the problem was that the result was just something nice and did not solve any
                 problem.
             </p>
@@ -85,7 +88,8 @@
                     <img src="assets/img/title02.svg" alt="">
                     <div>
                         <h4>Start with asking why</h4>
-                        <p>You will start seeing things differently and coming up with more effective ways of achieving
+                        <p>You will start seeing things differently and coming up with more effective ways of
+                            achieving
                             goals.
                         </p>
                     </div>
@@ -103,7 +107,8 @@
                     <img src="assets/img/title01.svg" alt="">
                     <div>
                         <h4>Design solutions with love</h4>
-                        <p>Only when you experience a problem yourself do you understand the frustration of the users
+                        <p>Only when you experience a problem yourself do you understand the frustration of the
+                            users
                             and resolve to end it.
                         </p>
                     </div>
@@ -129,7 +134,8 @@
         <section id="lets-go">
             <div>
                 <h1>Are you ready? Let’s go!!</h1>
-                <p>The challenge lasts 30 days. On each of those days you will have to create a solution to any problem
+                <p>The challenge lasts 30 days. On each of those days you will have to create a solution to any
+                    problem
                     you
                     yourself are
                     facing and show the result to the community.
@@ -142,7 +148,8 @@
                     <img src="assets/img/step01.svg" alt="">
                     <h4>Find your problem</h4>
                     <p>It has to be a problem that’s personally affecting or affected you, like finding your keys,
-                        calling a taxi or even remembering something. Open your eyes, look around you carefully and pay
+                        calling a taxi or even remembering something. Open your eyes, look around you carefully and
+                        pay
                         close attention to your surroundings.
                     </p>
                 </div>
@@ -153,7 +160,8 @@
                     <h2>02</h2>
                     <img src="assets/img/step02.svg" alt="">
                     <h4>Think about the solution</h4>
-                    <p>It's time to look for solutions. What can you do to solve these problems? It's time to think out
+                    <p>It's time to look for solutions. What can you do to solve these problems? It's time to think
+                        out
                         of the box, grab your notebook and start writing down all the ideas that come to mind.
                     </p>
                 </div>
@@ -164,7 +172,8 @@
                     <h2>03</h2>
                     <img src="assets/img/step03.svg" alt="">
                     <h4>Design your proposal</h4>
-                    <p>How can design help solve your problem? It's time to think about features and functionality, and
+                    <p>How can design help solve your problem? It's time to think about features and functionality,
+                        and
                         then start designing. Don’t forget to always ask yourself: Would I actually use this?
                     </p>
                 </div>
@@ -175,8 +184,10 @@
                     <h2>04</h2>
                     <img src="assets/img/step04.svg" alt="">
                     <h4>Share your work</h4>
-                    <p>Share your design on instagram or dribbble with the hashtag #thedesignproject Remember to explain
-                        what the problem was, how you came up with the solution and how the design achieves it. Find out
+                    <p>Share your design on instagram or dribbble with the hashtag #thedesignproject Remember to
+                        explain
+                        what the problem was, how you came up with the solution and how the design achieves it. Find
+                        out
                         what people have to say about it.
                     </p>
                 </div>
