Last changes, readme

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         -->
         <section id="subscribe">
             <!-- =================================================================
-                Form 1 - Subscribe
+                Form 1 - email-subscribe
             -->
             <form action="#" id="email-subscribe">
                 <h1>Do you like this challenge?</h1>
@@ -214,7 +214,7 @@
 
 
     <!-- =================================================================
-        Form 2 - Cconfirmation
+        Form 2 - Confirmation
         This form must be placed outside of main because we will hide main
         and display this form dynamically
     -->
