--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <header>
         <div class="logo">
-            <img src="assets/img/logo.svg" alt="">
+            <img src="assets/img/logo.svg" alt="Logo">
             <div class="logo-text">
                 <p>TheDesignProject</p>
                 <p>by a WebDesigner</p>
@@ -33,8 +33,8 @@
 
             <!-- animated graphics top/right -->
             <div class="cloud">
-                <img src="assets/img/ilustracion1.png" alt="">
-                <img src="assets/img/ilustracion_people.png" alt="" class="its-me">
+                <img src="assets/img/ilustracion1.png" alt="My Heaven">
+                <img src="assets/img/ilustracion_people.png" alt="that's me" class="its-me">
             </div>
 
             <!-- Text block -->
@@ -42,7 +42,7 @@
                 <h1>How to become a better designer?</h1>
                 <p>A challenge to improve your product design skills by solving problems
                     in your daily life.
-                    <img src="assets/img/rocket.png" alt="">
+                    <img src="assets/img/rocket.png" alt="rocket">
                 </p>
                 <a href="#gallery">SCROLL TO SEE MORE —</a>
             </div>
@@ -53,7 +53,7 @@
             Section (as <div>): An image gallery 
         -->
         <div id="gallery">
-            <img src="assets/img/images.jpg" alt="">
+            <img src="assets/img/images.jpg" alt="gallery">
         </div>
 
 
@@ -62,7 +62,7 @@
         -->
         <section id="idea-start">
             <div>
-                <h1>Every idea<img src="assets/img/idea.png" alt=""><br>starts with a<br> need</h1>
+                <h1>Every idea<img src="assets/img/idea.png" alt="idea"><br>starts with a<br> need</h1>
             </div>
             <p>
                 Earlier this year (January 2018). I started to think about how I could improve my design skills and
@@ -85,7 +85,7 @@
             <h1>After several weeks of sticking to this challenge, I learned a lot</h1>
             <article>
                 <div>
-                    <img src="assets/img/title02.svg" alt="">
+                    <img src="assets/img/title02.svg" alt="Start with asking why">
                     <div>
                         <h4>Start with asking why</h4>
                         <p>You will start seeing things differently and coming up with more effective ways of
@@ -95,7 +95,7 @@
                     </div>
                 </div>
                 <div>
-                    <img src="assets/img/title04.svg" alt="">
+                    <img src="assets/img/title04.svg" alt="Your ideas will have more value">
                     <div>
                         <h4>Your ideas will have more value</h4>
                         <p>By looking at problems from a different perspective, your ideas will be fresher and more
@@ -104,7 +104,7 @@
                     </div>
                 </div>
                 <div>
-                    <img src="assets/img/title01.svg" alt="">
+                    <img src="assets/img/title01.svg" alt="Design solutions with love">
                     <div>
                         <h4>Design solutions with love</h4>
                         <p>Only when you experience a problem yourself do you understand the frustration of the
@@ -114,7 +114,7 @@
                     </div>
                 </div>
                 <div>
-                    <img src="assets/img/title03.svg" alt="">
+                    <img src="assets/img/title03.svg" alt="Share and show your work">
                     <div>
                         <h4>Share and show your work</h4>
                         <p>As designers, we are often afraid of showing work that’s not finished or doesn’t look
@@ -142,10 +142,10 @@
                 </p>
             </div>
             <article>
-                <img src="assets/img/step01.png" alt="">
+                <img src="assets/img/step01.png" alt="Step 01">
                 <div>
                     <p class="number">01</p>
-                    <img src="assets/img/step01.svg" alt="">
+                    <img src="assets/img/step01.svg" alt="Step 01">
                     <h4>Find your problem</h4>
                     <p>It has to be a problem that’s personally affecting or affected you, like finding your keys,
                         calling a taxi or even remembering something. Open your eyes, look around you carefully and
@@ -155,10 +155,10 @@
                 </div>
             </article>
             <article>
-                <img src="assets/img/step02.png" alt="">
+                <img src="assets/img/step02.png" alt="Step 02">
                 <div>
                     <p class="number">02</p>
-                    <img src="assets/img/step02.svg" alt="">
+                    <img src="assets/img/step02.svg" alt="Step 02">
                     <h4>Think about the solution</h4>
                     <p>It's time to look for solutions. What can you do to solve these problems? It's time to think
                         out
@@ -167,10 +167,10 @@
                 </div>
             </article>
             <article>
-                <img src="assets/img/step03.png" alt="">
+                <img src="assets/img/step03.png" alt="Step 03">
                 <div>
                     <p class="number">03</p>
-                    <img src="assets/img/step03.svg" alt="">
+                    <img src="assets/img/step03.svg" alt="Step 03">
                     <h4>Design your proposal</h4>
                     <p>How can design help solve your problem? It's time to think about features and functionality,
                         and
@@ -179,10 +179,10 @@
                 </div>
             </article>
             <article>
-                <img src="assets/img/step04.png" alt="">
+                <img src="assets/img/step04.png" alt="Step 04">
                 <div>
                     <p class="number">04</p>
-                    <img src="assets/img/step04.svg" alt="">
+                    <img src="assets/img/step04.svg" alt="Step 04">
                     <h4>Share your work</h4>
                     <p>Share your design on instagram or dribbble with the hashtag #thedesignproject Remember to
                         explain
@@ -237,7 +237,7 @@
     -->
     <footer>
         <p> Created with Love by a Webdesigner </p>
-        <img src="assets/img/love.png" alt="">
+        <img src="assets/img/love.png" alt="love">
     </footer>
 
     <script src="assets/js/main.js"></script>
