Fixed HTML Validator warnings

--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
 
             <!-- Text block -->
             <div class="text-block">
-                <h1>How to become a better designer?</h1>
-                <p>A challenge to improve your product design skills by solving problems
+                <h2>How to become a better designer?</h2>
+                <h3>A challenge to improve your product design skills by solving problems
                     in your daily life.
                     <img src="assets/img/rocket.png" alt="rocket">
-                </p>
+                </h3>
                 <a href="#gallery">SCROLL TO SEE MORE —</a>
             </div>
         </section>
@@ -61,19 +61,16 @@
             Section: Every idea starts with a need
         -->
         <section id="idea-start">
-            <div>
-                <h1>Every idea<img src="assets/img/idea.png" alt="idea"><br>starts with a<br> need</h1>
-            </div>
+            <h2>Every idea<img src="assets/img/idea.png" alt="idea"><br>starts with a<br> need
+            </h2>
             <p>
-                Earlier this year (January 2018). I started to think about how I could improve my design skills and
-                attract more customers. I wanted to start designing some ideas that for a long time I had only on
-                paper
-                and stored on my cell phone, I decided to look for some challenge, something that makes more sense
-                with
-                what I thought. I saw that many designers (especially in dribbble) made a daily user interface, I
-                really
-                liked the idea, but the problem was that the result was just something nice and did not solve any
-                problem.
+                Earlier this year (January 2018). I started to think about how I could improve
+                my design skills andattract more customers. I wanted to start designing some
+                ideas that for a long time I had only on paperand stored on my cell phone, I
+                decided to look for some challenge, something that makes more sense with
+                what I thought. I saw that many designers (especially in dribbble) made a daily
+                user interface, I really liked the idea, but the problem was that the result
+                was just something nice and did not solve anyproblem.
             </p>
         </section>
 
@@ -82,15 +79,14 @@
             Section: After several weeks of sticking to this challenge...
         -->
         <section id="learning">
-            <h1>After several weeks of sticking to this challenge, I learned a lot</h1>
+            <h2>After several weeks of sticking to this challenge, I learned a lot</h2>
             <article>
                 <div>
                     <img src="assets/img/title02.svg" alt="Start with asking why">
                     <div>
                         <h4>Start with asking why</h4>
-                        <p>You will start seeing things differently and coming up with more effective ways of
-                            achieving
-                            goals.
+                        <p>You will start seeing things differently and coming up with more
+                            effective ways of achieving goals.
                         </p>
                     </div>
                 </div>
@@ -133,7 +129,7 @@
         -->
         <section id="lets-go">
             <div>
-                <h1>Are you ready? Let’s go!!</h1>
+                <h2>Are you ready? Let’s go!!</h2>
                 <p>The challenge lasts 30 days. On each of those days you will have to create a solution to any
                     problem
                     you
@@ -203,7 +199,7 @@
                 Form 1 - email-subscribe
             -->
             <form action="#" id="email-subscribe">
-                <h1>Do you like this challenge?</h1>
+                <h2>Do you like this challenge?</h2>
                 <p>Subscribe to be the first to hear about updates, tips and recommendations!</p>
                 <input type="email" name="email" id="email" placeholder="Write your email here" required>
                 <input type="button" id="subscribe-button" value="Subscribe" onclick="subscribe()">
@@ -221,8 +217,8 @@
     <form action="#" id="email-confirm">
         <div>
             <h2>🥳</h2>
-            <h1>YOUR EMAIL HAS BEEN RECEIVED.</h1>
-            <h1>THANKS FOR SUBSCRIBING.</h1>
+            <h2>YOUR EMAIL HAS BEEN RECEIVED.</h2>
+            <h2>THANKS FOR SUBSCRIBING.</h2>
             <p>
                 Now we just need to confirm your email address - please click the link in the email we sent to you.
                 Thanks!
