Fixed HTML Validator warnings

--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
 <body>
 
     <header>
-        <div class="logo">
-            <img src="assets/img/logo.svg" alt="Logo">
-            <div class="logo-text">
-                <p>TheDesignProject</p>
-                <p>by a WebDesigner</p>
+        <a href="#">
+            <div class="logo">
+                <img src="assets/img/logo.svg" alt="Logo">
+                <div class="logo-text">
+                    <p>TheDesignProject</p>
+                    <p>by a WebDesigner</p>
+                </div>
             </div>
-        </div>
+        </a>
     </header>
 
 
